design cart page with responsive
-- design invoice page (with responsive)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Dmitriy",
         "Dribbble",
+        "Ecommerce",
         "filepond",
         "Groshev",
         "Malikan",
