changes done for product card

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Dribbble",
         "Ecommerce",
         "filepond",
+        "Govo",
         "Groshev",
         "Malikan",
         "staycation",
