design billing info, shipping info & payment info tab

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,12 @@
         "Dribbble",
         "Ecommerce",
         "filepond",
+        "Filomena",
+        "Fruitville",
         "Govo",
         "Groshev",
         "Malikan",
+        "Runte",
         "staycation",
         "Unstarred",
         "vacay"
