--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Backy",
         "Dmitriy",
         "Dribbble",
         "Ecommerce",
@@ -11,6 +12,7 @@
         "Malikan",
         "Runte",
         "staycation",
+        "swiper",
         "Unstarred",
         "vacay"
     ]
