started kanban design

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Fruitville",
         "Govo",
         "Groshev",
+        "kanban",
         "Malikan",
         "Runte",
         "staycation",
