--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "filepond",
         "Filomena",
         "Fruitville",
+        "Gerhold",
         "Govo",
         "Groshev",
         "Malikan",
