design invoice create page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Backy",
+        "Creditcard",
         "Dmitriy",
         "Dribbble",
         "Ecommerce",
@@ -11,6 +12,7 @@
         "Govo",
         "Groshev",
         "Malikan",
+        "Pixelstrap",
         "Runte",
         "staycation",
         "swiper",
