kan-ban new card design making

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "jkanban",
         "kanban",
         "Malikan",
+        "perfomance",
         "Runte",
         "staycation",
         "swiper",
