design user card page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,35 @@
 {
     "cSpell.words": [
         "Backy",
+        "Bashirian",
+        "Baumbach",
+        "Corkery",
         "Creditcard",
         "Dmitriy",
         "Dribbble",
         "Ecommerce",
+        "Emayila",
         "filepond",
         "Filomena",
         "Fruitville",
         "Gerhold",
         "Govo",
         "Groshev",
+        "Hoeger",
         "kanban",
+        "Kshlerin",
+        "Kulas",
         "Malikan",
         "Pixelstrap",
+        "Raegan",
         "Runte",
+        "Sidorshina",
         "staycation",
         "swiper",
+        "Tailwindcss",
+        "Tiana",
         "Unstarred",
-        "vacay"
+        "vacay",
+        "Volkman"
     ]
 }
