design user profile page
--- about, experience & photo section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "Gerhold",
         "Govo",
         "Groshev",
+        "hoeger",
         "jkanban",
         "kanban",
         "Kshlerin",
