started design edit-profile page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,14 @@
         "Backy",
         "Bashirian",
         "Baumbach",
+        "confirmpassword",
         "Corkery",
         "Creditcard",
         "Dmitriy",
         "Dribbble",
         "Ecommerce",
         "Emayila",
+        "emayilasidorshina",
         "filepond",
         "Filomena",
         "Fruitville",
@@ -17,15 +19,19 @@
         "Groshev",
         "hoeger",
         "jkanban",
+        "jobtitle",
         "kanban",
         "Kshlerin",
         "Kulas",
         "Malikan",
+        "newpassword",
+        "oldpassword",
         "perfomance",
         "Pixelstrap",
         "Raegan",
         "Runte",
         "Sidorshina",
+        "Sidorshinaemayila",
         "staycation",
         "swiper",
         "Tailwindcss",
