make some changes in edit profile page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "confirmpassword",
         "Corkery",
         "Creditcard",
+        "deteleForm",
         "Dmitriy",
         "Dribbble",
         "Ecommerce",
@@ -24,6 +25,7 @@
         "Kshlerin",
         "Kulas",
         "Malikan",
+        "newlink",
         "newpassword",
         "oldpassword",
         "perfomance",
