--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "Runte",
         "Sidorshina",
         "Sidorshinaemayila",
+        "sortby",
         "staycation",
         "swiper",
         "Tailwindcss",
