design calendar page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Backy",
         "Bashirian",
         "Baumbach",
+        "calander",
         "confirmpassword",
         "Corkery",
         "Creditcard",
@@ -12,6 +13,7 @@
         "Ecommerce",
         "Emayila",
         "emayilasidorshina",
+        "extralight",
         "filepond",
         "Filomena",
         "Fruitville",
