--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "confirmpassword",
         "Corkery",
         "Creditcard",
+        "daygrid",
         "deteleForm",
         "Dmitriy",
         "Dribbble",
