changes in todo page design

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Backy",
         "Bashirian",
         "Baumbach",
+        "Bigbazar",
         "calander",
         "confirmpassword",
         "Corkery",
