rtl layout done in video chat app
in add to cart, cart page rtl done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "Govo",
         "Groshev",
         "hoeger",
+        "Iconly",
         "jkanban",
         "jobtitle",
         "kanban",
