sidebar scroll issue solve

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "filepond",
         "Filomena",
         "firstname",
+        "fontawesome",
         "Fruitville",
         "Gerhold",
         "Govo",
