issue solved in bonus ui
-- alert, button, badge, avatars page issue solved

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Bigbazar",
         "btns",
         "calander",
+        "Caslin",
         "confirmpassword",
         "contenteditable",
         "Corkery",
@@ -36,11 +37,13 @@
         "Kulas",
         "lastname",
         "Malikan",
+        "Mrunali",
         "newlink",
         "newpassword",
         "Nicepage",
         "oldpassword",
         "perfomance",
+        "Photoshop",
         "Pixelstrap",
         "Raegan",
         "Runte",
