issue solved in ui kits all pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Accusamus",
         "Backy",
         "Bashirian",
         "Baumbach",
@@ -18,6 +19,7 @@
         "Ecommerce",
         "Emayila",
         "emayilasidorshina",
+        "Extralarge",
         "extralight",
         "filepond",
         "Filomena",
@@ -37,10 +39,13 @@
         "Kulas",
         "lastname",
         "Malikan",
+        "marfa",
+        "mcsweeney's",
         "Mrunali",
         "newlink",
         "newpassword",
         "Nicepage",
+        "nulla",
         "oldpassword",
         "perfomance",
         "Photoshop",
