--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "Iconly",
         "jkanban",
         "jobtitle",
+        "Josephin",
         "kanban",
         "Kshlerin",
         "Kulas",
