changes done in form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "contenteditable",
         "Corkery",
         "Creditcard",
+        "customizer",
         "daygrid",
         "deteleForm",
         "Dmitriy",
@@ -31,6 +32,7 @@
         "Govo",
         "Groshev",
         "hoeger",
+        "Hoverable",
         "Iconly",
         "jkanban",
         "jobtitle",
