solved issue in table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "newpassword",
         "Nicepage",
         "nulla",
+        "Okuma",
         "oldpassword",
         "perfomance",
         "Photoshop",
@@ -63,6 +64,7 @@
         "swiper",
         "Tailwindcss",
         "Taskboard",
+        "Thablooks",
         "Tiana",
         "Unstarred",
         "vacay",
