checkbox and radio page design

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,8 +38,10 @@
         "jobtitle",
         "Josephin",
         "kanban",
+        "Koho",
         "Kshlerin",
         "Kulas",
+        "Laravel",
         "lastname",
         "Malikan",
         "marfa",
@@ -55,6 +57,7 @@
         "Photoshop",
         "Pixelstrap",
         "Raegan",
+        "Roxo",
         "Runte",
         "Sidorshina",
         "Sidorshinaemayila",
@@ -68,6 +71,7 @@
         "Tiana",
         "Unstarred",
         "vacay",
-        "Volkman"
+        "Volkman",
+        "Voxo"
     ]
 }
