--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,9 +69,11 @@
         "Taskboard",
         "Thablooks",
         "Tiana",
+        "tiktok",
         "Unstarred",
         "vacay",
         "Volkman",
-        "Voxo"
+        "Voxo",
+        "xmark"
     ]
 }
