--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "Accusamus",
+        "animatecss",
+        "apexchart",
         "Backy",
         "Bashirian",
         "Baumbach",
@@ -8,11 +10,13 @@
         "btns",
         "calander",
         "Caslin",
+        "chartjs",
         "confirmpassword",
         "contenteditable",
         "Corkery",
         "Creditcard",
         "customizer",
+        "daisyui",
         "daygrid",
         "deteleForm",
         "Dmitriy",
@@ -27,10 +31,12 @@
         "firstname",
         "fontawesome",
         "Fruitville",
+        "fullcalender",
         "Gerhold",
         "Glenmore",
         "Govo",
         "Groshev",
+        "gulpfile",
         "hoeger",
         "Hoverable",
         "Iconly",
@@ -55,7 +61,9 @@
         "oldpassword",
         "perfomance",
         "Photoshop",
+        "photoswipe",
         "Pixelstrap",
+        "purgecss",
         "Raegan",
         "Roxo",
         "Runte",
@@ -66,12 +74,14 @@
         "Succes",
         "swiper",
         "Tailwindcss",
+        "Taimodule",
         "Taskboard",
         "Thablooks",
         "Tiana",
         "tiktok",
         "Unstarred",
         "vacay",
+        "vectormap",
         "Volkman",
         "Voxo",
         "xmark"
