ecommerce dashboard design start

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "Iconly",
         "jkanban",
         "jobtitle",
+        "Jone",
         "Josephin",
         "kanban",
         "Knowledgebase",
@@ -57,6 +58,7 @@
         "newlink",
         "newpassword",
         "Nicepage",
+        "Nicol",
         "nulla",
         "Okuma",
         "oldpassword",
@@ -80,6 +82,7 @@
         "Thablooks",
         "Tiana",
         "tiktok",
+        "Tshirt",
         "uikit",
         "Unstarred",
         "vacay",
