design order table, seller table, sale table in ecommerce dashboard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "Raegan",
         "Roxo",
         "Runte",
+        "SARB",
         "Sidorshina",
         "Sidorshinaemayila",
         "sortby",
