Sales Summary charts change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "Creditcard",
         "customizer",
         "daisyui",
+        "datetime",
         "daygrid",
         "deteleForm",
         "Dmitriy",
@@ -32,6 +33,7 @@
         "fontawesome",
         "Fruitville",
         "fullcalender",
+        "gaurav",
         "Gerhold",
         "Glenmore",
         "Govo",
