changes Orders Status

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,9 @@
         "vectormap",
         "Volkman",
         "Voxo",
-        "xmark"
+        "xaxis",
+        "xmark",
+        "zoomin",
+        "zoomout"
     ]
 }
