design core-feature and component section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "Govo",
         "Groshev",
         "gulpfile",
+        "highligher",
         "hoeger",
         "Hoverable",
         "Iconly",
