Orders Status  & Total Customer chart completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,9 @@
         "Sidorshina",
         "Sidorshinaemayila",
         "sortby",
+        "sparkline",
         "staycation",
+        "stepline",
         "Succes",
         "swiper",
         "Tailwindcss",
