chnage popover tool tip & modal page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Accpet",
         "Accusamus",
         "Acum",
         "advancedareachart",
@@ -7,25 +8,32 @@
         "Åland",
         "Amirreza",
         "animatecss",
+        "Annos",
         "anodejs",
         "apexchart",
         "apexcharts",
         "appdev",
         "areachart",
         "Arocca",
+        "asos",
         "atoa",
         "Backy",
         "barchart",
         "Barthélemy",
+        "baselayerchange",
         "baseval",
         "Bashirian",
         "Baumbach",
+        "bbox",
         "behaviour",
         "Beliza",
         "Bento",
+        "berner",
         "Bigbazar",
+        "bitmapdata",
         "boardkey",
         "borderradius",
+        "Bouns",
         "Bouvet",
         "bouy",
         "boxplot",
@@ -40,6 +48,7 @@
         "callseconds",
         "calltime",
         "calltype",
+        "Camelun",
         "candlestickchart",
         "candlstick",
         "Caslin",
@@ -53,6 +62,7 @@
         "codepen",
         "codesandbox",
         "columnchart",
+        "comingsoon",
         "Componant",
         "confirmpassword",
         "contenteditable",
@@ -69,19 +79,24 @@
         "d’Ivoire",
         "daisyui",
         "Dango",
+        "Daron",
         "datalink",
+        "datamaps",
         "datetime",
         "daygrid",
         "Dayley",
         "deoptimize",
+        "descs",
         "deteleForm",
         "Diya",
         "Dmitriy",
         "Dobbs",
         "Dorene",
+        "dotsbg",
         "downloaditem",
         "dragendfn",
         "dragfn",
+        "dragmove",
         "dragula",
         "Dribbble",
         "dring",
@@ -99,6 +114,7 @@
         "Eswatini",
         "evaled",
         "eventmap",
+        "exif",
         "exlight",
         "expirydate",
         "Extralarge",
@@ -113,6 +129,7 @@
         "Fleur",
         "Flipkart",
         "fontawesome",
+        "Froms",
         "Fruitville",
         "fullcalender",
         "Futuna",
@@ -134,10 +151,13 @@
         "icbo",
         "icli",
         "Iconly",
+        "imaeg",
         "immidiately",
         "Inarayhutton",
         "initialised",
         "insta",
+        "inversed",
+        "invoce",
         "itemkey",
         "itemsize",
         "itemtitle",
@@ -161,8 +181,12 @@
         "Laufer",
         "Lenz",
         "Leste",
+        "lgrad",
+        "liftcigs",
+        "lightbox",
         "linechart",
         "linedatalabelchart",
+        "liness",
         "linkd",
         "loyogame",
         "Maarten",
@@ -179,11 +203,14 @@
         "Merperson",
         "Meryl",
         "Minu",
+        "miscell",
         "Moai",
+        "MODIS",
         "mose",
         "Mrunali",
         "Mukrani",
         "Nazar",
+        "Neccesory",
         "Nedick's",
         "Negs",
         "Neilson",
@@ -197,7 +224,9 @@
         "Oden",
         "Okuma",
         "oldpassword",
+        "oldschool",
         "onpreparefile",
+        "opps",
         "Opti",
         "organisation",
         "Pabelo",
@@ -209,9 +238,13 @@
         "Pixelstrap",
         "pluginloaded",
         "polarareachart",
+        "postitquiz",
+        "Previewable",
+        "Pricesheet",
         "Pricilla",
         "Príncipe",
         "Priview",
+        "productmodal",
         "pswp",
         "purgecss",
         "Pushkarev",
@@ -220,11 +253,14 @@
         "Radialchart",
         "Raegan",
         "rangeareachart",
+        "rangebar",
         "Reoprt",
         "Repr",
+        "resetpassword",
         "Retarget",
         "Réunion",
         "reviwe",
+        "rgrad",
         "Rica",
         "Riccardo",
         "Roboto",
@@ -238,6 +274,7 @@
         "SARB",
         "Scharfe",
         "sellmokam",
+        "sendcookie",
         "Sidorshina",
         "Sidorshinaemayila",
         "Slicktext",
@@ -245,6 +282,7 @@
         "Soheb",
         "Sohel",
         "sortby",
+        "soundcrest",
         "Spanich",
         "sparkline",
         "staycation",
@@ -255,6 +293,7 @@
         "Stooul",
         "storytime",
         "Streep",
+        "sublist",
         "Succes",
         "Sufiya",
         "Supervillain",
@@ -276,12 +315,16 @@
         "Timout",
         "Tokelau",
         "Tomé",
+        "topojson",
+        "treemap",
         "Tshirt",
+        "uikings",
         "uikit",
         "undeployed",
         "unfilter",
         "unfollow",
         "ungrab",
+        "Unitsfrom",
         "unsets",
         "Unstarred",
         "uploadprogress",
@@ -297,14 +340,19 @@
         "Volkman",
         "Voss",
         "Voxo",
+        "weathermap",
         "Wiliand",
+        "wodbig",
         "xaxis",
+        "xaxistooltip",
         "xlink",
         "xmark",
         "XMLID",
         "yaxis",
+        "yotu",
         "yrange",
         "zloirock",
+        "zoomable",
         "zoomin",
         "zoomout"
     ]
