changes in chat app page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "Cordell",
         "Corkery",
         "Côte",
+        "createroom",
         "Creditcard",
         "crosshairs",
         "crossvent",
